
2008-08-14  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Added FunctionPlot
                        Added rounded corners option to Bar Plot
                        Added pseudo 3D option to Bar Plot
                        Set the default for the DotLinePlot to plot without
                        the dots
        * tests.py: Added new tests for the function_plot function
                    Added new tests fot BarPlot new options

2008-08-14  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Added DonutPlot
        * tests.py: Added new tests for the donut_plot function

2008-07-12  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Bug fixes for BarPlot
        * tests.py: Added new tests for the bar_plot function

2008-07-11  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Added BarPlot working draft
        * tests.py: Added tests regarding the use of bar_plot function

2008-07-07  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * CairoPlot.py: Changed PizzaPlot Class and pizza_plot function names
                        to PiePlot and pie_plot respectively;
                        Refactored Gantt Chart into Object Oriented mode;
                        Fixed the function DotLinePlot.calc_extents;
                        Added color_series argument to Plot constructor;

2008-07-04  Rodrigo Araújo <alf.rodrigo@gmail.com>
        * tests.py: Test suit used to check if the module is working correctly
        * CairoPlot.py: Refactored Pizza Graphic into Object Oriented mode;
                        Fixed the function Plot.render_bounding_box which
                        wasn't drawing the line after defining it.

2008-07-04  João S. O. Bueno <gwidion@gmail.com>

        * NEWS: initial NEWS
        * CairoPlot.py: Refactored DotLine Graphic into Object Oriented mode
                        Added support for other kind of Cairo Surfaces 