@@ -9,4 +9,5 @@ Version 1.1:
     - Added rounded corners and pseudo 3D option to Bar Plots
     - Added support for Donut Plots
     - Added support for Function Plots
+    - Added discrete series option to Function Plots
 
